--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   "files": [ "dist", "README.md" ],
   "repository": {
     "type": "git",
-    "url": "URL_OF_YOUR_REPOSITORY"
+    "url": "https://github.com/ainaLagrande/modal-hrnet"
   }
 }
