--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "simple-component-library",
   "version": "0.1.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",  
+  "files": [ "dist", "README.md" ],  
+  "repository": 
+  {    
+    "type": "git",    "url": "ainaLagrande/modal-hrnet"  
+  },
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
@@ -28,13 +35,5 @@
     "babel-cli": "^6.26.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
-  },
-
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ainaLagrande/modal-hrnet"
   }
 }
